<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayoutLauncher"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".LauncherActivity">

    <ImageView
        android:id="@+id/LauncherActivityImageView"
        android:layout_width="238dp"
        android:layout_height="238dp"
        android:layout_gravity="center"
        android:layout_marginBottom="50dp"
        android:contentDescription="@string/logo_de_l_application"
        android:src="@drawable/ic_rien" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="50sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/long_app_name"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textViewCreator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/credits"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/version_number"
        android:textSize="20sp" />

</LinearLayout>