<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RechercheParActiviteActivity">

    <TextView
        android:id="@+id/nomPageRechercherActivitePostalCodeNAF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/rechercher_une_entreprise"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editTextRechercheParActiviteVilleNomEntreprise"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/nom_de_l_entreprise"
            android:inputType="textPersonName"
            tools:ignore="Autofill" />

        <ImageButton
            android:id="@+id/buttonRechercheParActiviteButtonSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/rechercher"
            android:src="@android:drawable/ic_menu_search" />
    </LinearLayout>

    <TextView
        android:id="@+id/RechercheParActiviteActivityAfficherOptionSupplementaires"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:gravity="end"
        android:text="@string/afficher_les_options_suppl_mentaires" />

    <RadioGroup
        android:id="@+id/RadioGroupOptionsSupplementaires"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <RadioButton
            android:id="@+id/RechercheParActiviteActivityRadioButtonActivite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recherche_par_activite" />

        <AutoCompleteTextView
            android:id="@+id/RechercheParActiviteActivityEditTextActivite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/activite"
            android:inputType="textAutoComplete"
            android:visibility="gone"
            tools:ignore="Autofill" />

        <RadioButton
            android:id="@+id/RechercheParActiviteActivityRadioButtonCodeNAF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recherche_par_code_naf" />

        <AutoCompleteTextView
            android:id="@+id/RechercheParActiviteActivityEditTextCodeNAF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="0123456789ABCDEFZ"
            android:hint="@string/code_naf"
            android:inputType="textCapCharacters"
            android:maxLength="5"
            android:visibility="gone"
            tools:ignore="Autofill" />
    </RadioGroup>

    <ProgressBar
        android:id="@+id/progressBarRechercheParActiviteActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <ListView
        android:id="@+id/listResultRechercheParActiviteActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</TableLayout>