<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RechercheParEntrepriseActivity">

    <TextView
        android:id="@+id/nomPageRechercherEntreprisePostalDepartement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/rechercher_une_entreprise"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editTextRechercheParEntrepriseVilleNomEntreprise"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/nom_de_l_entreprise"
            android:inputType="textPersonName"
            tools:ignore="Autofill" />

        <ImageButton
            android:id="@+id/buttonRechercheParEntrepriseButtonSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/rechercher"
            android:src="@android:drawable/ic_menu_search" />
    </LinearLayout>

    <TextView
        android:id="@+id/RechercheParEntrepriseActivityAfficherOptionSupplementaires"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:gravity="end"
        android:text="@string/afficher_les_options_suppl_mentaires" />

    <RadioGroup
        android:id="@+id/RadioGroupOptionsSupplementaires"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <RadioButton
            android:id="@+id/RechercheParEntrepriseActivityRadioButtonCodePostal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rechercher_par_code_postal" />

        <EditText
            android:id="@+id/RechercheParEntrepriseActivityEditTextCodePostal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/code_postal"
            android:inputType="numberDecimal"
            android:maxLength="5"
            android:minHeight="48dp"
            android:visibility="gone"
            tools:ignore="Autofill" />

        <RadioButton
            android:id="@+id/RechercheParEntrepriseActivityRadioButtonDepartement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rechercher_par_departement" />

        <EditText
            android:id="@+id/RechercheParEntrepriseActivityEditTextDepartement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="0123456789ABab"
            android:hint="@string/departement"
            android:inputType="textCapCharacters"
            android:maxLength="3"
            android:minHeight="48dp"
            android:visibility="gone"
            tools:ignore="Autofill" />
    </RadioGroup>

    <ProgressBar
        android:id="@+id/progressBarRechercheParEntrepriseActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <ListView
        android:id="@+id/listResultRechercheParEntrepriseActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</TableLayout>