<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EntrepriseArchiveeActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/resultat_de_votre_recherche"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textViewNomEntrepriseHistory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:text="@string/nom_de_lentreprise"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textViewDateCreationEntrepriseHistory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:text="@string/date_de_la_creation_de_l_entreprise"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textViewActiviteEntrepriseHistory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:text="@string/activite_de_l_entreprise"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewCodePostalEntrepriseHistory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/code_postal_de_l_entreprise"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textViewEntrepriseIsActiveHistory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/entreprise_active"
            android:textSize="20sp" />
    </LinearLayout>

    <fragment
        android:id="@+id/mapHistory"
        class="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="15dp" />

</LinearLayout>